# notmuchproxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  mise.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: email-assistant-knowledge.md
src/notmuchproxy/: __init__.py  auth.py  config.py  fixtures.py  main.py  models.py  notmuch.py  query.py
tests/: conftest.py  test_api.py  test_auth_config.py  test_cors.py  test_excludes.py  test_mcp.py
