[project]
name = "notmuchproxy"
version = "0.1.0"
description = "Read-only OpenAPI proxy for a notmuch email archive, usable as an Open WebUI tool server"
readme = "README.md"
license = "MIT"
authors = [{ name = "Igor Serebryany", email = "igor47@moomers.org" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.7",
    "fastmcp>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.11",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notmuchproxy"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
# the test client (starlette/httpx) is largely untyped; don't make tests unreadable over it
executionEnvironments = [
    { root = "tests", reportUnknownMemberType = false, reportUnknownVariableType = false, reportUnknownArgumentType = false },
    { root = "src" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # starlette's TestClient warns about a future httpx2 migration; not actionable here
    "ignore:Using `httpx` with `starlette.testclient`:DeprecationWarning",
]
